[CR124] RDM10342 Fix long wording cut off in the search by dropdown

--- a/public/css/frdr-search.css
+++ b/public/css/frdr-search.css
@@ -485,6 +485,10 @@ label.feature-label {
     align-items: center;
 }
 
+.advanced-field-dropdown .dropdown-menu {
+    min-width: min-content;
+}
+
 button.dropdown-item.fieldname {
     display: block;
     padding: 0.25rem 8px;
